added page for user view and the send challenge form

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1364,7 +1364,7 @@ a.bg-primary:hover {
   background-color: #286090;
 }
 .bg-success {
-  background-color: #dff0d8;
+  background-color: #bbb;
 }
 a.bg-success:hover {
   background-color: #c1e2b3;
